--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <div class="navbar">
       <div class="logo">
-        <a href=""> <img src="logo.png" /></a>
+        <a href=""> <img src="/assets/images/logo.png" /></a>
       </div>
       <ul>
         <li><a href="">Explore</a></li>
@@ -15,7 +15,7 @@
         <li><button>Log in/Sign up</button></li>
       </ul>
       <div class="menu">
-        <img src="menu.png" />
+        <img src="/assets/images/menu.png" />
       </div>
     </div>
 
@@ -27,12 +27,10 @@
         <b>making opportunities accessible, </b> and by connecting creators with
         trusted communities & brands<b> through open collaborations.</b> Youll
         typically find our team working hard on the Joyn platform, which is
-        where we facilitate hundreds of<b
-          ><i>
+        where we facilitate hundreds of<b><i>
             artwork commissions, open curations, remix contests, giveaways &
-            grants.</i
-          ></b
-        >
+            grants.</i>
+         </b >
       </p>
     </div>
     <div class="team">
@@ -41,81 +39,81 @@
     <div class="container">
       <div class="rowf">
         <div class="mic">
-          <img src="1.png" />
+          <img src="/assets/images/1.png" />
           <div>
             <b>Michael</b><br />Chief Servant<br />
             @Michael_Chest
           </div>
         </div>
         <div class="mic">
-          <img src="1.png" />
+          <img src="/assets/images/1.png" />
           <div>
             <b>Michael</b><br />Chief Servant<br />
             @Michael_Chest
           </div>
         </div>
         <div class="mic">
-          <img src="1.png" />
+          <img src="/assets/images/1.png" />
           <div><b>Michael</b><br />Chief Servant <br />@Michael_Chest</div>
         </div>
       </div>
       <div class="rowf">
         <div class="mic">
-          <img src="1.png" />
+          <img src="/assets/images/1.png" />
           <div>
             <b>Michael</b><br />Chief Servant<br />
             @Michael_Chest
           </div>
         </div>
         <div class="mic">
-          <img src="1.png" />
+          <img src="/assets/images/1.png"/>
           <div>
             <b>Michael</b><br />Chief Servant<br />
             @Michael_Chest
           </div>
         </div>
         <div class="mic">
-          <img src="1.png" />
+          <img src="/assets/images/1.png"/>
           <div><b>Michael</b><br />Chief Servant <br />@Michael_Chest</div>
         </div>
       </div>
       <div class="rowf">
         <div class="mic">
-          <img src="1.png" />
+          <img src="/assets/images/1.png" />
           <div>
             <b>Michael</b><br />Chief Servant<br />
             @Michael_Chest
           </div>
         </div>
         <div class="mic">
-          <img src="1.png" />
+          <img src="/assets/images/1.png" />
           <div>
             <b>Michael</b><br />Chief Servant<br />
             @Michael_Chest
           </div>
         </div>
         <div class="mic">
-          <img src="1.png" />
+          <img src="/assets/images/1.png" />
           <div><b>Michael</b><br />Chief Servant <br />@Michael_Chest</div>
         </div>
       </div>
       <div class="rowf">
         <div class="mic">
-          <img src="1.png" />
+          <img src="/assets/images/1.png" />
           <div>
             <b>Michael</b><br />Chief Servant<br />
             @Michael_Chest
           </div>
         </div>
         <div class="mic">
-          <img src="1.png" />
+          <img src="/assets/images/1.png" />
           <div>
             <b>Michael</b><br />Chief Servant<br />
             @Michael_Chest
           </div>
         </div>
         <div class="mic">
-          <img src="1.png" />
+          <img src="/assets/images/1.png" />
           <div><b>Michael</b><br />Chief Servant <br />@Michael_Chest</div>
         </div>
       </div>
@@ -129,7 +127,7 @@
         <button>Submit</button>
         <div class="fs">
           <div>
-            <img src="logo.png" />
+            <img src="/assets/images/logo.png" />
           </div>
           <p>Co-creation tools for Web3 communities</p>
         </div>
@@ -137,10 +135,10 @@
       <div class="flex">
         <div class="second">
           <div class="join">Join the community</div>
-          <img src="discord.png" />
-          <img src="discord.png" />
-          <img src="discord.png" />
-          <img src="discord.png" />
+          <img src="/assets/images/discord.png" />
+          <img src="/assets/images/discord.png" />
+          <img src="/assets/images/discord.png" />
+          <img src="/assets/images/discord.png" />
           <br />
           <div class="s">
             <p><b>Platform</b></p>
