--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <div class="navbar">
       <div class="logo">
-        <a href=""> <img src="../assets/images/logo.png" /></a>
+        <a href=""> <img src="/assets/images/logo.png" /></a>
       </div>
       <ul>
         <li><a href="">Explore</a></li>
@@ -15,7 +15,7 @@
         <li><button>Log in/Sign up</button></li>
       </ul>
       <div class="menu">
-        <img src="../assets/images/menu.png" />
+        <img src="./assets/images/menu.png" />
       </div>
     </div>
 
