--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <div class="navbar">
       <div class="logo">
-        <a href=""> <img src="/assets/images/logo.png" /></a>
+        <a href=""> <img src="./assets/images/logo.png" /></a>
       </div>
       <ul>
         <li><a href="">Explore</a></li>
